// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer/> matches snapshot with close button 1`] = `
<div
  class="css-p8mw6w-drawerContainer-drawerContainer"
  data-testid="drawer"
>
  <div
    class="css-tigpv4-maskContainer"
    data-testid="mask"
    style="opacity: 0;"
  />
  <dialog
    aria-expanded="true"
    aria-hidden="false"
    aria-modal="true"
    class="dialog placement-left"
    id="drawer-dialog"
    style="opacity: 0; transform: none;"
  >
    <header
      class="css-11wb1nr-drawerHeader-drawerHeader"
      data-testid="drawer-header"
      id="drawer-title"
    >
      <h2
        class="css-1r6ji88-headingContainer-headingContainer"
      >
        Title
      </h2>
      <button
        aria-label="Close drawer"
        type="button"
      >
        <svg-file-stub
          height="24"
        />
      </button>
    </header>
  </dialog>
</div>
`;

exports[`<Drawer/> matches snapshot with header, body and footer 1`] = `
<div
  class="drawer css-p8mw6w-drawerContainer-drawerContainer"
  data-testid="drawer"
  id="main-drawer"
>
  <div
    class="css-tigpv4-maskContainer"
    data-testid="mask"
    style="opacity: 0;"
  />
  <dialog
    aria-expanded="true"
    aria-hidden="false"
    aria-modal="true"
    class="dialog placement-left"
    id="drawer-dialog"
    style="opacity: 0; transform: none;"
  >
    <header
      class="css-11wb1nr-drawerHeader-drawerHeader"
      data-testid="drawer-header"
      id="drawer-title"
    >
      <h2
        class="css-1r6ji88-headingContainer-headingContainer"
      >
        Test header
      </h2>
    </header>
    <div
      class="css-1vbxgux-drawerBody"
    >
      Test body
    </div>
    <footer
      class="css-1ppo1yc-footerContainer-footerContainer"
      data-testid="drawer-footer"
    >
      Test footer
    </footer>
  </dialog>
</div>
`;

exports[`<Drawer/> matches snapshot with noGutters Header 1`] = `
<div
  class="css-p8mw6w-drawerContainer-drawerContainer"
  data-testid="drawer"
>
  <div
    class="css-tigpv4-maskContainer"
    data-testid="mask"
    style="opacity: 0;"
  />
  <dialog
    aria-expanded="true"
    aria-hidden="false"
    aria-modal="true"
    class="dialog placement-left"
    id="drawer-dialog"
    style="opacity: 0; transform: none;"
  >
    <header
      class="css-gtw3cv-drawerHeader-drawerHeader"
      data-testid="drawer-header"
      id="drawer-title"
    >
      <h2
        class="css-1r6ji88-headingContainer-headingContainer"
      >
        Title
      </h2>
    </header>
  </dialog>
</div>
`;

exports[`<Drawer/> matches snapshot with right placement 1`] = `
<div
  class="css-p8mw6w-drawerContainer-drawerContainer"
  data-testid="drawer"
>
  <div
    class="css-tigpv4-maskContainer"
    data-testid="mask"
    style="opacity: 0;"
  />
  <dialog
    aria-expanded="true"
    aria-hidden="false"
    aria-modal="true"
    class="dialog placement-right"
    id="drawer-dialog"
    style="opacity: 0; transform: translateX(100%) translateZ(0);"
  >
    <header
      class="css-11wb1nr-drawerHeader-drawerHeader"
      data-testid="drawer-header"
      id="drawer-title"
    >
      <h2
        class="css-1r6ji88-headingContainer-headingContainer"
      >
        Title
      </h2>
    </header>
  </dialog>
</div>
`;

exports[`<Drawer/> matches snapshot without header and footer 1`] = `
<div
  class="css-p8mw6w-drawerContainer-drawerContainer"
  data-testid="drawer"
>
  <div
    class="css-tigpv4-maskContainer"
    data-testid="mask"
    style="opacity: 0;"
  />
  <dialog
    aria-expanded="true"
    aria-hidden="false"
    aria-modal="true"
    class="dialog placement-left"
    id="drawer-dialog"
    style="opacity: 0; transform: none;"
  >
    <div
      class="css-1vbxgux-drawerBody"
    >
      Test body
    </div>
  </dialog>
</div>
`;
